--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  toast: ^0.1.5
-  provider: ^4.3.1
   shared_preferences: ^0.5.8
   intl: ^0.16.1
   rxdart: ^0.24.1
   get_it: ^5.0.1
-  google_fonts: ^1.1.0
+  hive: ^1.4.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^0.1.3
